# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## 3.5.2 - 2023-11-20
### Changed
- Appointment admin is now searchable and filterable. Not required fields are effectively not required.

## 3.5.1 - 2023-11-14
### Added
- new setting KEPCHUP_YEAR_NAMES to override the default year names
- Export of courses to excel format

### Changed
- payment method is now modifiable and exported in the registrations export

## 3.5.0 - 2023-11-09
### Added
- Impersonation of users

### Changed
- Postfinance webhooks are now saved
- Add failure view rather than redirecto to payment

### Fixed
- Multi save of extra forms
- Improve autocancel to use invoices instead of registrations
- Next button in wizard if multiple extra questions available
- Use local time in appoitments


## 3.4.2 - 2023-11-03
### Added
- Display (and search) of phone numbers in user list

### Changed
- Possibility to cancel registration and invoice from the payment page
- When a single phone field is used, change its label to "mobile phone"
- Make AVS uneditable for Montreux
- Make base fields required on user form
- Appointment message less misleading

### Fixed
- Instructor form in wizard now displays date selector widget


## 3.4.1 - 2023-10-30
### Fixed
- Issue in rendering if the registration has an extra of type image and this extra is not checked (ValueError)


## 3.4.0 - 2023-10-13
### Changed
- New J+S export (they changed their definition)


## 3.3.0 - 2023-10-11

### Added
- Add some text on payment page if registration is set to expire after a delay
- New paid column to registrations export
- Multiple appointments for a single course
- New settings (KEPCHUP_REGISTRATION_HIDE_COUNTRY, KEPCHUP_REGISTRATION_HIDE_OTHER_PHONES,
  KEPCHUP_APPOINTMENTS_WITHOUT_WIZARD)

### Changed