@@ -239,6 +239,7 @@ def kepchup_context(request):
         "NO_EXTRAS": settings.KEPCHUP_NO_EXTRAS,
         "USE_SSO": settings.KEPCHUP_USE_SSO,
         "USE_APPOINTMENTS": settings.KEPCHUP_USE_APPOINTMENTS,
+        "APPOINTMENTS_WITHOUT_WIZARD": settings.KEPCHUP_APPOINTMENTS_WITHOUT_WIZARD,
         "DISPLAY_LAGAPEO": settings.KEPCHUP_DISPLAY_LAGAPEO,
         "DISPLAY_OVERLAP_HELP": settings.KEPCHUP_DISPLAY_OVERLAP_HELP,
         "CAN_DELETE_CHILD": settings.KEPCHUP_CAN_DELETE_CHILD,
